--- a/mynewssite1.css
+++ b/mynewssite1.css
@@ -6,8 +6,8 @@ body {
 
 #nat {
 
-font-style: helvetica; 	
-
+font-family: helvetica; 	
+font-weight: 300;
 font-size: 70px;
 width: 30%;
 margin-left: 425px;
