--- a/mynewssite1.css
+++ b/mynewssite1.css
@@ -6,7 +6,7 @@ body {
 
 #nat {
 
-font-family: helvetica; 	
+font-family: times new roman; 	
 font-weight: 500;
 font-size: 70px;
 margin-left: 425px;
