--- a/mynewssite1.css
+++ b/mynewssite1.css
@@ -1,3 +1,14 @@
+.grid -container {
+
+	display: grid;
+	grid-template-columns: 200px 250px;
+
+
+}
+
+
+
+
 body {
   background-color: lightblue;
 }
