--- a/mynewssite1.css
+++ b/mynewssite1.css
@@ -1,10 +1,4 @@
-.grid -container {
 
-	display: grid;
-	grid-template-columns: 200px 250px;
-
-
-}
 
 
 
@@ -14,7 +8,21 @@ body {
 }
 
 
+.grid -container {
 
+	display: grid;
+	grid-template-columns: 200px 250px;
+	grid-auto-rows: minmax(150ppx, auto);
+	grid-row-gap: 20px;
+	grid-column-gap: 10px;
+	
+
+}
+
+
+
+
+/*
 #nat {
 
 font-family: times new roman; 	
@@ -32,6 +40,6 @@ font-size: 30px;
 text-align: center;
 margin-bottom: 1000px;
 
-
-
 }
+
+*/
