--- a/mynewssite1.css
+++ b/mynewssite1.css
@@ -1,7 +1,6 @@
 
 
-
-.grid-container {
+#grid-container {
 	display: grid;
 	grid-template-columns: 200px 250px;
 	grid-auto-rows: minmax(150px, auto);
@@ -36,24 +35,3 @@
 	grid-row: span 3;
 }
 
-/*
-#nat {
-
-font-family: times new roman; 	
-font-weight: 500;
-font-size: 70px;
-margin-left: 425px;
-text-align: left;
-
-
-}
-
-#nat1 {
-
-font-size: 30px;
-text-align: center;
-margin-bottom: 1000px;
-
-}
-
-*/
