--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 
 	
 
-	grid-template-columns:  repeat(auto-fit , minmax(140px,  1fr));  
+	grid-template-columns:  repeat(auto-fill , minmax(140px,  1fr));  
 
 	grid-auto-rows: 240px;
 
