--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 
 	
 
-	grid-template-columns:  repeat(auto-fit, minmax(140px,  2fr));  
+	grid-template-columns:  repeat(auto-fit, minmax(140px,  2fr, 1fr, 1fr));  
 
 	grid-auto-rows: 240px;
 
