--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 
 	
 
-	grid-template-columns:  repeat(6, 3 240px);  
+	grid-template-columns:  repeat(7, 240px);  
 	grid-auto-rows: 300px;
 	grid-template-rows: 200px;
 	
