--- a/photo-grid.css
+++ b/photo-grid.css
@@ -27,6 +27,12 @@
 	grid-row: span 2 / auto;
 
 }
+	
+#mythirdone {
+	
+	background-color: blue;
+	
+	}
 
 .card-wide {
 	grid-column: span 2 / auto;
