--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 
 	
 
-	grid-template-columns:   repeat(, 350px);  
+	grid-template-columns:   repeat(3, 350px);  
 	grid-template-rows: 175px;
 
 
