--- a/photo-grid.css
+++ b/photo-grid.css
@@ -15,6 +15,9 @@
 
 	grid-template-columns:   repeat(3, 250px);  
 /*	grid-template-rows: 175px 80px 175px;  */
+	grid-auto-rows: minmax (150px, auto);
+	
+	
 
 
 }
