--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 
 	
 
-	grid-template-columns: 200px 250px);  
+	grid-template-columns: 200px 250px;  
 /*	grid-template-rows: 175px 80px 175px;  */
 	grid-auto-rows: minmax (150px, auto);
 	
