--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 3fr));  
+	grid-template-columns: repeat(auto-fill, minmax(300px, auto));  
 /*	grid-template-rows: 275px 80px 175px;  */
 	grid-auto-rows: minmax(75px, auto);
 	
