--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,8 +10,9 @@
 
 	display: grid;
 	gap: .2rem;
+	grid-template-columns: 1fr;
 	grid-template-columns: repeat(auto-fit, minmax(300px, auto));  
-/*	grid-template-rows: 275px 80px 175px;  */
+
 	grid-auto-rows: minmax(175px, auto);
 	
 	
