--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-auto: repeat(auto-fit, minmax(300px, auto));  
+	grid-auto-template: repeat(auto-fit, minmax(300px, auto));  
 	grid-auto-rows: minmax(175px, auto);
 	
 	
