--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-auto-template: repeat(200px 2fr, minmax(300px, auto));  
-	grid-auto-rows: minmax(215px, auto);
+	grid-auto-rows: repeat( 200px 2fr, minmax(215px, auto));
 	
 	
 
