--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-columns-auto: 200px;  
+	grid-template-columns: 200px;  
 	grid-auto-rows: repeat( 200px 2fr, minmax(215px, auto));
 	
 	
