--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-columns: 200px 400px;  
+	grid-template-columns: 2fr 3fr;  
 	grid-auto-rows: repeat(200px 2fr, minmax(215px, auto));
 	
 	
