--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-columns: 3fr;  
+	grid-template-columns: repeat(3, 100px);  
 	grid-auto-rows: 100px;
 	
 	
