--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-template-columns: repeat(3, 100px);  
-	grid-auto-rows: 100px;
+	grid-template-rows: 100px;
 	
 	
 
