--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-columns: repeat(4, 100px);  
+	grid-template-auto: repeat(4, 100px);  
 	grid-template-rows: 150px;
 	
 	
