--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-template-auto: repeat(4, 100px, minmax(200px auto));  
-	grid-template-rows: 150px;
+	grid-template-rows: 250px 150px;
 	
 	
 
