--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-template-columns: repeat(4, 100px);  
-	grid-template-rows: 250px 150px;
+	grid-auto-rows: 250px 150px;
 	
 	
 
