--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-template-columns: repeat(4, 550px);  
-	grid-auto-rows: 250px 150px 75px;
+	grid-auto-rows: 150px;
 	
 	
 
