--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,39 +13,18 @@
 	grid-template-columns: repeat(4, 300px);  
 	grid-auto-rows: 150px;
 	
-	
-
-
 }
 
 
 @media screen and (min-width: 100px) { 
 
-.card-tall {
-
-	grid-row: span 2 / auto;
-
-}
 	
-
-	
-#samplehere {
-	
-	background-color: green;
-	border: 1px solid black;
-	height: 120px;
-	width: 120px;
+.grid-item grid-item-1 {
 	
 	}
-
-.card-wide {
-	grid-column: span 2 / auto;
-}
-
-	
 	
 
-.card {
+.photo.grid{
 
 	background-color: beige;
 
