--- a/photo-grid.css
+++ b/photo-grid.css
@@ -30,11 +30,11 @@
 
 }
 
-.grid-item grid-item-1 {
+.grid-item-1 {
 	
 	border: 1px solid black;
 	height: 200px;
-	width: 200px;
+	width: 300px;
 	}
 	
 	
