--- a/photo-grid.css
+++ b/photo-grid.css
@@ -38,8 +38,20 @@
 	}
 	
 	
+.grid-item-2 {
+	
+	border: 1px solid black;
+	height: 200px;
+	width: 300px;
+	}
 	
 	
 	
+.grid-item-3 {
+	
+	border: 1px solid black;
+	height: 200px;
+	width: 300px;
+	}
 	
 	
