--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .4rem;
 	grid-template-columns: repeat(3, 300px);  
-	grid-auto-rows: 100px;
+	grid-template-rows: 100px;
 	
 }
 
