--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .4rem;
-	grid-columns-auto: repeat(2, 300px);  
+	grid-auto-columns: repeat(2, 300px);  
 	grid-template-rows: repeat(1, 350px);
 	
 }
