--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .4rem;
 	grid-template-columns: repeat(2, 300px);  
-	grid-rows-auto: repeat(300px);
+	grid-template-rows: repeat(9, 250px);
 	
 }
 
