--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .4rem;
 	grid-template-columns: repeat(3, 300px);  
-	grid-template-rows: repeat(4, 200px);
+	grid-auto-rows: minmax(200px, auto);
 	
 }
 
