--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .4rem;
-	grid-template-columns: repeat(2, 300px);  
+	grid-template-columns: repeat(2fr, 300px);  
 	grid-auto-rows: minmax(200px, auto);
 	
 }
