--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	grid-template-columns: repeat(2fr 1fr 1fr);  
-	grid-auto-rows: minmax(350px, auto);
+	grid-auto-rows: 75px;
 	
 }
 
