--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .2rem;
-	grid-template-columns: repeat(2fr 1fr 1fr);  
+	grid-template-columns: repeat(4, 100px);  
 	grid-auto-rows: 75px;
 	
 }
