--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .6rem;
 	grid-template-columns: repeat(4, 300px);  
-	grid-template-rows: 75px;
+	grid-template-rows: 75px 100px;
 	
 }
 
