--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,6 +10,7 @@
 
 	display: grid;
 	gap: .6rem;
+	align-items: center;
 	grid-template-columns: repeat(3, 300px);  
 	grid-template-rows: 200px 200px 100px;
 	
