--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .6rem;
 	align-items: center;
-	grid-template-columns: repeat(3, 300px);  
+	grid-template-columns: repeat(auto-fit, minmax(3, 300px));  
 	grid-template-rows: 200px 200px 100px;
 	
 }
