--- a/photo-grid.css
+++ b/photo-grid.css
@@ -14,8 +14,8 @@
 	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));  
 	grid-template-rows: 200px 200px 100px;
 	
-	/*
-	grid-template-columns: repeat(3, 300px); */
+	
+//	grid-template-columns: repeat(3, 300px); //
 	
 }
 
