--- a/photo-grid.css
+++ b/photo-grid.css
@@ -14,7 +14,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));  
 	grid-template-rows: 200px 200px 100px;
 	
-	
+/*	grid-template-columns: repeat(3, 300px); */
 }
 
 
@@ -38,7 +38,7 @@
 	
 	border: 1px solid black;
 	
-	width: 300px;
+	
 	}
 	
 	
