--- a/photo-grid.css
+++ b/photo-grid.css
@@ -12,7 +12,7 @@
 	gap: .2rem;
 	align-items: center;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));  
-	grid-template-rows: 500px 200px 100px;
+	grid-template-rows: repeat(3, 200px);
 	
 /*	grid-template-columns: repeat(3, 300px); */
 }
