--- a/photo-grid.css
+++ b/photo-grid.css
@@ -11,7 +11,7 @@
 	display: grid;
 	gap: .2rem;
 	align-items: center;
-	grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));  
+	/* grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));  */
 	grid-template-rows: repeat(3, 200px);
 
 	
