--- a/photo-grid.css
+++ b/photo-grid.css
@@ -12,7 +12,7 @@
 	gap: .2rem;
 	align-items: center;
 	 grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));  
-	grid-auto-rows: repeat(3, 200px);
+	grid-template-rows: repeat(4, 200px);
 
 	
 }
