--- a/photo-grid.css
+++ b/photo-grid.css
@@ -50,6 +50,7 @@
 .grid-item-4 {
 	
 	border: 1px solid black;
+	background-color: lightGrey;
 	
 	}
 
@@ -67,6 +68,7 @@
 .grid-item-6 {
 	
 	border: 1px solid black;
+	background-color: lightGrey;
 
 	}
 	
