--- a/photo-grid.css
+++ b/photo-grid.css
@@ -43,6 +43,7 @@
 .grid-item-3 {
 	
 	border: 1px solid;
+	background-color: lightGrey;
 	
 	}
 	
@@ -97,7 +98,7 @@
 .grid-item-9 {
 	
 	border: 1px solid black;
-	
+	background-color: lightGrey;
 	
 	}
 	
