--- a/photo-grid.css
+++ b/photo-grid.css
@@ -51,7 +51,7 @@
 .grid-item-4 {
 	
 	border: 1px solid black;
-	background-color: lightGrey;
+	background-color: white;
 	
 	}
 
@@ -69,7 +69,7 @@
 .grid-item-6 {
 	
 	border: 1px solid black;
-	background-color: lightGrey;
+	background-color: white;
 
 	}
 	
@@ -78,7 +78,7 @@
 .grid-item-7 {
 	
 	border: 1px solid black;
-	background-color: lightGrey;
+	background-color: white;
 	
 	
 	}
@@ -98,7 +98,7 @@
 .grid-item-9 {
 	
 	border: 1px solid black;
-	background-color: lightGrey;
+	background-color: white;
 	
 	
 	}
