--- a/photo-grid.css
+++ b/photo-grid.css
@@ -21,11 +21,11 @@
 .grid-item-1 {
 	
 	
-	border: none;
+	border-left: 1px solid grey;
 	
 	font-color: blue;
 	font-size: 20px;
-	background-color: lightGrey:
+
 	
 	}
 	
