--- a/photo-grid.css
+++ b/photo-grid.css
@@ -59,7 +59,7 @@
 	
 .grid-item-5 {
 	
-	border: 1px solid black;
+	border: none;
 	
 	
 	}
@@ -77,7 +77,7 @@
 	
 .grid-item-7 {
 	
-	border: 1px solid black;
+	border-right: 1px solid grey;
 	
 	
 	
