--- a/photo-grid.css
+++ b/photo-grid.css
@@ -88,7 +88,7 @@
 	
 .grid-item-8 {
 	
-	border: 1px solid black;
+	border: none;
 	
 
 	}
@@ -97,7 +97,7 @@
 	
 .grid-item-9 {
 	
-	border: 1px solid black;
+	border-left: 1px solid grey;
 	
 	
 	
