--- a/photo-grid.css
+++ b/photo-grid.css
@@ -12,6 +12,8 @@
 	gap: .1rem;
 	grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));  
 	grid-template-rows: repeat(4, 200px);
+	
+	font-family: sans-serif;
 
 	
 }
