--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,8 @@
 	grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));  
 	grid-template-rows: repeat(4, 200px);
 	
-	font-family: sans-serif;
+	font-family: serif;
+	font-weight: bold;
 
 	
 }
