--- a/photo-grid.css
+++ b/photo-grid.css
@@ -27,7 +27,7 @@
 	
 	border-right: 1px solid grey;
 	
-	font-color: blue;
+	font-color: red;
 	font-size: 20px;
 	background-color: lightGrey;
 	padding: 10px;
