--- a/photo-grid.css
+++ b/photo-grid.css
@@ -27,7 +27,7 @@
 	
 	border-right: 1px solid grey;
 	
-	text-color: red;
+	color: red;
 	font-size: 24px;
 	background-color: lightGrey;
 	padding: 10px;
