--- a/photo-grid.css
+++ b/photo-grid.css
@@ -10,7 +10,7 @@
 
 	display: grid;
 	gap: .1rem;
-	grid-template-columns: repeat(5, minmax(400px, 2fr));  
+	grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));  
 	grid-template-rows: repeat(6, 200px);
 	
 	font-family: serif;
