--- a/photo-grid.css
+++ b/photo-grid.css
@@ -54,7 +54,7 @@
 	
 .grid-item-4 {
 	
-
+	border: 1px solid grey;
 	padding: 10px;
 	
 	}
@@ -89,7 +89,7 @@
 	
 	
 	padding: 1px;
-	border-right: 1px solid black;
+	
 	
 	
 	
