--- a/photo-grid.css
+++ b/photo-grid.css
@@ -78,19 +78,17 @@
 
 	}
 
-#grid-item-6A {
+#grid-item-7 {
 	
 	font-color: blue;
 }
 	
 
 	
-.grid-item-7 {
+.grid-item-8 {
 	
 	
 	padding: 1px;
-	
-	
 	
 	
 	}
@@ -98,7 +96,7 @@
 
 
 	
-.grid-item-8 {
+.grid-item-9 {
 	
 	
 	padding: 10px;
@@ -108,7 +106,7 @@
 	
 
 	
-.grid-item-9 {
+.grid-item-10 {
 	
 	border-left: 1px solid black;
 	padding: 10px;
@@ -119,7 +117,7 @@
 	
 
 	
-.grid-item-10 {
+.grid-item-11 {
 	
 	border-width: 10px solid black;
 	
@@ -129,7 +127,7 @@
 	
 
 	
-.grid-item-11 {
+.grid-item-12 {
 	
 	border: 1px solid gold;
 	width: 300px;
@@ -139,7 +137,7 @@
 	
 
 	
-.grid-item-12 {
+.grid-item-13 {
 	
 	border: 1px solid green;
 	width: 300px;
