--- a/photo-grid.css
+++ b/photo-grid.css
@@ -133,7 +133,7 @@
 	
 	padding: 1px;
 	font-size: 16px;
-	
+	background-color;
 	
 
 	}
@@ -141,7 +141,7 @@
 
 .grid-item-12 {
 	
-	font-size: 22px;
+	font-size: 14px;
 	padding:10px;
 	border: right;
 	
