--- a/photo-grid.css
+++ b/photo-grid.css
@@ -15,7 +15,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));  
 	grid-template-rows: repeat(12, 200px);
 	
-	font-family: sans-serif;
+	font-family: serif;
 	font-weight: bold;
 	
 }
