--- a/photo-grid.css
+++ b/photo-grid.css
@@ -12,8 +12,8 @@
 
 	display: grid;
 	gap: .1rem;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 4fr));  
-	grid-template-rows: repeat(12, 200px); 
+	grid-template-columns: repeat(auto-fit, minmax(200px, 4fr));  
+	grid-template-rows: repeat((auto-fit 12, 200px)); 
 	
 	font-family: serif;
 	font-weight: bold;
