--- a/photo-grid.css
+++ b/photo-grid.css
@@ -29,8 +29,8 @@
 	padding: 10px;
 	text-color: red;
 	line-height: 1;
-	border-height: 150px;
-	border-width: 400px;
+	height: 150px;
+	width: 400px;
 	border-style: spotted;
 		
 	grid-column-start: 1;
