--- a/photo-grid.css
+++ b/photo-grid.css
@@ -13,7 +13,7 @@
 	display: grid;
 	gap: .1rem;
 	grid-template-columns:  repeat(auto-fit, minmax(300px, 3fr));  
-	grid-auto-rows: repeat(12, 150px); 
+	grid-template-rows: repeat(12, 150px); 
 	
 	font-family: serif;
 	font-weight: bold;
