--- a/photo-grid.css
+++ b/photo-grid.css
@@ -33,7 +33,8 @@
 	text-color: red;
 	line-height: 1;
 	height: 100px;
-		
+	border-radius: 10px;
+	
 	grid-column-start: 1;
 	grid-column-end: 4;
 	
