--- a/photo-grid.css
+++ b/photo-grid.css
@@ -9,11 +9,15 @@
 
 .photo-grid {
 
-
+	@media screen and (min-width: 600px) {	
+		grid-template-rows: repeat(12, 150px);
+		
+	}
+		
 	display: grid;
 	gap: .1rem;
 	grid-template-columns:  repeat(auto-fit, minmax(300px, 3fr));  
-	grid-template-rows: repeat(12, 150px); 
+	 
 	
 	font-family: serif;
 	font-weight: bold;
