--- a/photo-grid.css
+++ b/photo-grid.css
@@ -36,7 +36,7 @@
 	border-radius: 10px;
 	
 	grid-column-start: 1;
-	grid-column-end: 3;
+	grid-column-end: 4;
 	
 	}
 	
@@ -58,6 +58,7 @@
 	padding: 10px;
 	font-size: 16px;
 	padding-top: 0px;
+	text-color: black;
 
 	
 	}
